--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Работа с git</h1>
+    <h2> Второй заголовок </h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, numquam consectetur voluptates repellendus facilis illum accusamus delectus nobis, enim blanditiis perferendis inventore dolore, iusto ab! Illum eos excepturi repellendus culpa.</p>
 </body>
 </html>
